fix: time overflow bug

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -201,7 +201,7 @@ td {
   padding: 0.5rem;
   line-height: 1.2rem;
   border-style: solid;
-  border-color: #C2DFE3;
+  border-color: #c2dfe3;
   border-width: 0.1px;
   border-bottom: 0;
   border-right: 0;
@@ -210,7 +210,7 @@ td {
 
 table {
   border-style: solid;
-  border-color: #C2DFE3;
+  border-color: #c2dfe3;
   border-collapse: collapse;
   border-width: 0.1px;
   border-radius: 10px;
